--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -2,7 +2,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "hashicorp/bionic64"
   config.vm.network "private_network", ip: "192.168.56.110"
   config.vm.hostname = "avarnierS"
-  config.vm.synced_folder "./", "/vagrant"
+  config.vm.synced_folder "./data", "/data"
 
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
@@ -11,6 +11,6 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "shell", inline: <<-SHELL
       curl -sfL https://get.k3s.io | sh -
+      cp /var/lib/rancher/k3s/server/token /data/
     SHELL
-  end
 end
