--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,16 +1,37 @@
 Vagrant.configure("2") do |config|
+  config.vm.define "avarnierS"
+  config.vm.hostname = "avarnierS"
   config.vm.box = "hashicorp/bionic64"
   config.vm.network "private_network", ip: "192.168.56.110"
-  config.vm.hostname = "avarnierS"
   config.vm.synced_folder "./data", "/data"
 
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
     vb.memory = "512"
+    vb.cpus = 1
   end
 
   config.vm.provision "shell", inline: <<-SHELL
       curl -sfL https://get.k3s.io | sh -
       cp /var/lib/rancher/k3s/server/token /data/
+    SHELL
+end
+
+Vagrant.configure("2") do |config|
+  config.vm.define "avarnierSW"
+  config.vm.hostname = "avarnierSW"
+  config.vm.box = "hashicorp/bionic64"
+  config.vm.network "private_network", ip: "192.168.56.111"
+  config.vm.synced_folder "./data", "/data"
+
+  config.vm.provider "virtualbox" do |vb|
+    vb.gui = false
+    vb.memory = "512"
+    vb.cpus = 1
+  end
+
+  config.vm.provision "shell", inline: <<-SHELL
+    K3S_TOKEN=$(cat /data/token)
+    curl -sfL https://get.k3s.io | K3S_TOKEN=$K3S_TOKEN sh -
     SHELL
 end
