--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,37 +1,40 @@
 Vagrant.configure("2") do |config|
-  config.vm.define "avarnierS"
-  config.vm.hostname = "avarnierS"
-  config.vm.box = "hashicorp/bionic64"
-  config.vm.network "private_network", ip: "192.168.56.110"
-  config.vm.synced_folder "./data", "/data"
+  config.vm.define "avarnierS" do |avarnierS|
+    avarnierS.vm.hostname = "avarnierS"
+    avarnierS.vm.box = "hashicorp/bionic64"
+    avarnierS.vm.network "private_network", ip: "192.168.56.110"
+    avarnierS.vm.synced_folder "./data", "/data"
 
-  config.vm.provider "virtualbox" do |vb|
-    vb.gui = false
-    vb.memory = "512"
-    vb.cpus = 1
-  end
+    avarnierS.vm.provider "virtualbox" do |vb|
+      vb.gui = false
+      vb.memory = "512"
+      vb.cpus = 1
+    end
 
-  config.vm.provision "shell", inline: <<-SHELL
+    avarnierS.vm.provision "shell", inline: <<-SHELL
+      sudo apt update -y
+      sudo apt upgrade -y
       curl -sfL https://get.k3s.io | sh -
       cp /var/lib/rancher/k3s/server/token /data/
     SHELL
-end
-
-Vagrant.configure("2") do |config|
-  config.vm.define "avarnierSW"
-  config.vm.hostname = "avarnierSW"
-  config.vm.box = "hashicorp/bionic64"
-  config.vm.network "private_network", ip: "192.168.56.111"
-  config.vm.synced_folder "./data", "/data"
-
-  config.vm.provider "virtualbox" do |vb|
-    vb.gui = false
-    vb.memory = "512"
-    vb.cpus = 1
   end
 
-  config.vm.provision "shell", inline: <<-SHELL
-    K3S_TOKEN=$(cat /data/token)
-    curl -sfL https://get.k3s.io | K3S_TOKEN=$K3S_TOKEN sh -
+  config.vm.define "avarnierSW" do |avarnierSW|
+    avarnierSW.vm.hostname = "avarnierSW"
+    avarnierSW.vm.box = "hashicorp/bionic64"
+    avarnierSW.vm.network "private_network", ip: "192.168.56.111"
+    avarnierSW.vm.synced_folder "./data", "/data"
+
+    avarnierSW.vm.provider "virtualbox" do |vb|
+      vb.gui = false
+      vb.memory = "512"
+      vb.cpus = 1
+    end
+
+    avarnierSW.vm.provision "shell", inline: <<-SHELL
+      sudo apt update -y
+      sudo apt upgrade -y
+      curl -sfL https://get.k3s.io | K3S_URL=https://192.168.56.110:6443 K3S_TOKEN=$(cat /data/token) sh -
     SHELL
+  end
 end
