--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,40 +1,42 @@
 Vagrant.configure("2") do |config|
-  config.vm.define "avarnierS" do |avarnierS|
-    avarnierS.vm.hostname = "avarnierS"
-    avarnierS.vm.box = "hashicorp/bionic64"
-    avarnierS.vm.network "private_network", ip: "192.168.56.110"
-    avarnierS.vm.synced_folder "./data", "/data"
 
-    avarnierS.vm.provider "virtualbox" do |vb|
-      vb.gui = false
-      vb.memory = "512"
-      vb.cpus = 1
-    end
+  # Server Configuration
+  config.vm.define "lrandriaS" do |server|
+   server.vm.box = "hashicorp/bionic64"
+   server.vm.hostname = "lrandriaS"
+   server.vm.network "private_network", ip: "192.168.56.110"
+   server.vm.provider "virtualbox" do |vb|
+     vb.memory = 1024
+     vb.cpus = 1
+   end
+   # Share the /vagrant directory
+   server.vm.synced_folder ".", "/vagrant"
+   #Install K3s in controller mode
+   server.vm.provision "shell", inline: <<-SHELL
+   export INSTALL_K3S_EXEC="-node-ip 192.168.56.110  --bind-address=192.168.56.110 --advertise-address=192.168.56.110 "
+     # Generate and save the K3s token
+     curl -sfL https://get.k3s.io/ | sh -
+     K3S_TOKEN=$(sudo cat /var/lib/rancher/k3s/server/node-token)
+     echo "$K3S_TOKEN" > /vagrant/k3s-token
+   SHELL
+ end
 
-    avarnierS.vm.provision "shell", inline: <<-SHELL
-      sudo apt update -y
-      sudo apt upgrade -y
-      curl -sfL https://get.k3s.io | sh -
-      cp /var/lib/rancher/k3s/server/token /data/
-    SHELL
-  end
-
-  config.vm.define "avarnierSW" do |avarnierSW|
-    avarnierSW.vm.hostname = "avarnierSW"
-    avarnierSW.vm.box = "hashicorp/bionic64"
-    avarnierSW.vm.network "private_network", ip: "192.168.56.111"
-    avarnierSW.vm.synced_folder "./data", "/data"
-
-    avarnierSW.vm.provider "virtualbox" do |vb|
-      vb.gui = false
-      vb.memory = "512"
-      vb.cpus = 1
-    end
-
-    avarnierSW.vm.provision "shell", inline: <<-SHELL
-      sudo apt update -y
-      sudo apt upgrade -y
-      curl -sfL https://get.k3s.io | K3S_URL=https://192.168.56.110:6443 K3S_TOKEN=$(cat /data/token) sh -
-    SHELL
-  end
+ # ServerWorker Configuration
+ config.vm.define "lrandriaSW" do |server_worker|
+   server_worker.vm.box = "hashicorp/bionic64"
+   server_worker.vm.hostname = "lrandriaSW"
+   server_worker.vm.network "private_network", ip: "192.168.56.111"
+   server_worker.vm.provider "virtualbox" do |vb|
+     vb.memory = 1024
+     vb.cpus = 1
+   end
+   server_worker.vm.synced_folder ".", "/vagrant"
+   server_worker.vm.provision "shell", inline: <<-SHELL
+    # Retrieve the K3s token from the shared directory
+     K3S_TOKEN=$(sudo cat /vagrant/k3s-token)
+     # Install K3s in agent mode using the retrieved token
+     export INSTALL_K3S_EXEC="agent --server https://192.168.56.110:6443 --token-file /vagrant/k3s-token --node-ip=192.168.56.111"
+     curl -sfL https://get.k3s.io/ | sh -
+   SHELL
+ end
 end
