--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,42 +1,56 @@
+SERVER = "lrandriaS"
+WORKER = "lrandriaSW"
+
+SERVER_IP = "192.168.56.110"
+WORKER_IP = "192.168.56.111"
+
+TOKEN_FILE = "/vagrant/k3s-token"
+
+OS = "hashicorp/bionic64"
+MEMORY = "1024"
+CPU = "1"
+
 Vagrant.configure("2") do |config|
 
-  # Server Configuration
-  config.vm.define "lrandriaS" do |server|
-   server.vm.box = "hashicorp/bionic64"
-   server.vm.hostname = "lrandriaS"
-   server.vm.network "private_network", ip: "192.168.56.110"
-   server.vm.provider "virtualbox" do |vb|
-     vb.memory = 1024
-     vb.cpus = 1
-   end
-   # Share the /vagrant directory
-   server.vm.synced_folder ".", "/vagrant"
-   #Install K3s in controller mode
-   server.vm.provision "shell", inline: <<-SHELL
-   export INSTALL_K3S_EXEC="-node-ip 192.168.56.110  --bind-address=192.168.56.110 --advertise-address=192.168.56.110 "
-     # Generate and save the K3s token
-     curl -sfL https://get.k3s.io/ | sh -
-     K3S_TOKEN=$(sudo cat /var/lib/rancher/k3s/server/node-token)
-     echo "$K3S_TOKEN" > /vagrant/k3s-token
-   SHELL
- end
+    # Server Configuration
+    config.vm.define SERVER do |server|
+        server.vm.box = OS
+        server.vm.hostname = SERVER
+        server.vm.network "private_network", ip: SERVER_IP
+        server.vm.provider "virtualbox" do |vb|
+            vb.memory = MEMORY
+            vb.cpus = CPU
+    end
+   
+    # Share the /vagrant directory
+    server.vm.synced_folder ".", "/vagrant"
+   
+    server.vm.provision "shell", inline: <<-SHELL
+        # Install K3s in controller mode
+        export INSTALL_K3S_EXEC="-node-ip #{SERVER_IP}  --bind-address=#{SERVER_IP} --advertise-address=#{SERVER_IP}"
+        curl -sfL https://get.k3s.io/ | sh -
+        # Save token
+        sudo cp /var/lib/rancher/k3s/server/node-token #{TOKEN_FILE}
+    SHELL
+    end
 
- # ServerWorker Configuration
- config.vm.define "lrandriaSW" do |server_worker|
-   server_worker.vm.box = "hashicorp/bionic64"
-   server_worker.vm.hostname = "lrandriaSW"
-   server_worker.vm.network "private_network", ip: "192.168.56.111"
-   server_worker.vm.provider "virtualbox" do |vb|
-     vb.memory = 1024
-     vb.cpus = 1
-   end
-   server_worker.vm.synced_folder ".", "/vagrant"
-   server_worker.vm.provision "shell", inline: <<-SHELL
-    # Retrieve the K3s token from the shared directory
-     K3S_TOKEN=$(sudo cat /vagrant/k3s-token)
-     # Install K3s in agent mode using the retrieved token
-     export INSTALL_K3S_EXEC="agent --server https://192.168.56.110:6443 --token-file /vagrant/k3s-token --node-ip=192.168.56.111"
-     curl -sfL https://get.k3s.io/ | sh -
-   SHELL
- end
+    # ServerWorker Configuration
+    config.vm.define WORKER do |server_worker|
+        server_worker.vm.box = OS
+        server_worker.vm.hostname = WORKER
+        server_worker.vm.network "private_network", ip: WORKER_IP
+        server_worker.vm.provider "virtualbox" do |vb|
+            vb.memory = MEMORY
+            vb.cpus = CPU
+    end
+
+    # Share the /vagrant directory
+    server_worker.vm.synced_folder ".", "/vagrant"
+    
+    server_worker.vm.provision "shell", inline: <<-SHELL
+        # Install K3s in agent mode
+        export INSTALL_K3S_EXEC="agent --server https://#{SERVER_IP}:6443 --token-file #{TOKEN_FILE} --node-ip=#{WORKER_IP}"
+        curl -sfL https://get.k3s.io/ | sh -
+    SHELL
+    end
 end
