--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -21,10 +21,13 @@ Vagrant.configure("2") do |config|
     server.vm.provision "shell", inline: <<-SHELL
         # Install K3s in controller mode
         export INSTALL_K3S_EXEC="--node-ip #{SERVER_IP}  --bind-address=#{SERVER_IP} --advertise-address=#{SERVER_IP}"
+        export K3S_KUBECONFIG_MODE="644"
         curl -sfL https://get.k3s.io/ | sh -
         sleep 20
-        kubectl apply -f /vagrant/deployment.yaml
-        kubectl apply -f /vagrant/service.yaml
+        kubectl create configmap app1 --from-file /vagrant/app1.html
+        kubectl apply -f /vagrant/app1.yaml
+        kubectl apply -f /vagrant/app2.yaml
+        kubectl apply -f /vagrant/app3.yaml
         kubectl apply -f /vagrant/ingress.yaml
     SHELL
     end
