--- a/p2/app1.yaml
+++ b/p2/app1.yaml
@@ -7,8 +7,10 @@ spec:
   selector:
     app: app1
   ports:
-    - port: 80
-      targetPort: 8080
+    - protocol: TCP
+      port: 80
+
+---
 
 apiVersion: apps/v1
 kind: Deployment
@@ -28,5 +30,12 @@ spec:
         - name: app1
           image: nginx:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 80
           imagePullPolicy: Always
+          volumeMounts:
+            - name: app1
+              mountPath: /usr/share/nginx/html
+      volumes:
+        - name: app1
+          configMap:
+            name: app1
