--- a/p2/app2.yaml
+++ b/p2/app2.yaml
@@ -7,8 +7,10 @@ spec:
   selector:
     app: app2
   ports:
-    - port: 80
-      targetPort: 8080
+    - protocol: TCP
+      port: 80
+
+---
 
 apiVersion: apps/v1
 kind: Deployment
@@ -28,5 +30,5 @@ spec:
         - name: app2
           image: nginx:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 80
           imagePullPolicy: Always
