--- a/p2/ingress.yaml
+++ b/p2/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: minimal-ingress
+  name: ingress
 spec:
   rules:
   - host: app1.com
@@ -12,7 +12,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app2
+            name: app1
             port:
               number: 80
   - host: app2.com
