--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -3,7 +3,7 @@ SERVER = "lrandriaS"
 SERVER_IP = "192.168.56.110"
 
 OS = "bento/ubuntu-22.04"
-MEMORY = "1024"
+MEMORY = "2048"
 CPU = "1"
 
 Vagrant.configure("2") do |config|
@@ -20,11 +20,8 @@ Vagrant.configure("2") do |config|
     server.vm.synced_folder ".", "/vagrant"
     server.vm.provision "shell", inline: <<-SHELL
         # Install K3s in controller mode
-        export INSTALL_K3S_EXEC="--node-ip #{SERVER_IP}  --bind-address=#{SERVER_IP} --advertise-address=#{SERVER_IP}"
-        export K3S_KUBECONFIG_MODE="644"
+        export INSTALL_K3S_EXEC="--node-ip #{SERVER_IP}"
         curl -sfL https://get.k3s.io/ | sh -
-        sleep 20
-        kubectl create configmap app1 --from-file /vagrant/app1.html
         kubectl apply -f /vagrant/app1.yaml
         kubectl apply -f /vagrant/app2.yaml
         kubectl apply -f /vagrant/app3.yaml
