--- a/p2/app3.yaml
+++ b/p2/app3.yaml
@@ -9,13 +9,17 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      
+      targetPort: 8080
+
 ---
 
+# Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app3
+  labels:
+    app: app3
 spec:
   replicas: 1
   selector:
@@ -28,7 +32,9 @@ spec:
     spec:
       containers:
         - name: app3
-          image: nginx:latest
+          image: paulbouwer/hello-kubernetes:1.10
+          env:
+            - name: MESSAGE
+              value: "Hello from app3."
           ports:
-            - containerPort: 80
-          imagePullPolicy: Always
+            - containerPort: 8080
