--- a/p2/scripts/Vagrantfile
+++ b/p2/scripts/Vagrantfile
@@ -17,15 +17,15 @@ Vagrant.configure("2") do |config|
             vb.cpus = CPU
     end
   
-    server.vm.synced_folder ".", "/vagrant"
+    server.vm.synced_folder "../", "/vagrant"
     server.vm.provision "shell", inline: <<-SHELL
         # Install K3s in controller mode
         export INSTALL_K3S_EXEC="--node-ip #{SERVER_IP}"
         curl -sfL https://get.k3s.io/ | sh -
-        kubectl apply -f /vagrant/app1.yaml
-        kubectl apply -f /vagrant/app2.yaml
-        kubectl apply -f /vagrant/app3.yaml
-        kubectl apply -f /vagrant/ingress.yaml
+        kubectl apply -f /vagrant/confs/app1.yaml
+        kubectl apply -f /vagrant/confs/app2.yaml
+        kubectl apply -f /vagrant/confs/app3.yaml
+        kubectl apply -f /vagrant/confs/ingress.yaml
     SHELL
     end
   end
